<resources>
    <string name="app_name">nav_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_movies">Movies</string>
    <string name="menu_login">Login</string>
    <string name="menu_signup">Signup</string>

    <string name="title_discover">Discover</string>
    <string name="title_profile">Profile</string>
</resources>