<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.nav_drawer.ui.movies.MoviesFragment"
        android:label="@string/menu_movies"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.nav_drawer.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_signup"
        android:name="com.example.nav_drawer.ui.signup.SignUpFragment"
        android:label="@string/menu_signup"
        tools:layout="@layout/fragment_signup" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.nav_drawer.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_dash_board" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.nav_drawer.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_editprofile"
            app:destination="@id/navigation_editprofile" >

        <argument
            android:name="name"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        </action >
    </fragment>

    <fragment
        android:id="@+id/navigation_editprofile"
        android:name="com.example.nav_drawer.ui.profile.EditProfileFragment"
        android:label="EditProfile"
        tools:layout="@layout/fragment_edit_profile" >
        <action
            android:id="@+id/action_navigation_editprofile_to_navigation_profile"
            app:destination="@id/navigation_profile" />
        <argument
            android:name="name"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

</navigation>