<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_movies"
            android:icon="@drawable/baseline_arrow_forward_ios_24" />
        <item
            android:id="@+id/nav_login"
            android:title="@string/menu_login"
            android:icon="@drawable/baseline_arrow_forward_ios_24" />
        <item
            android:id="@+id/nav_signup"
            android:title="@string/menu_signup"
            android:icon="@drawable/baseline_arrow_forward_ios_24" />
    </group>

    <item
        android:title=""
        android:orderInCategory="100"
        android:checkable="false"
        android:visible="false" />

    <item
        android:id="@+id/nav_button"
        android:title="Logout"
        android:icon="@drawable/baseline_logout_24"
        android:checkable="false"
        android:orderInCategory="101"
        app:showAsAction="always" />

</menu>

